# hipp0ai

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  install.sh  package.json  pnpm-lock.yaml  test-5-features.sh  tsconfig.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: brand-check.yml  ci.yml  e2e.yml  quality.yml  release.yml  security-scan.yml
.husky/: pre-commit
benchmarks/: README.md  runner.ts
benchmarks/baselines/: naive-rag.ts
benchmarks/config/: scoring-params.json  synonyms.json
benchmarks/datasets/: contradiction-detection.json  latency-scenarios.json  role-differentiation.json  role-retrieval.json  token-efficiency.json
benchmarks/results/: latest.md
deployment/: alice-soul.md
docs/: MIGRATION.md  PRODUCT_NORTH_STAR.md  README.md  TROUBLESHOOTING.md  agent-protocol.md  agent-wings.md  api-reference.md  architecture.md  authentication.md  background-workers.md  benchmarks.md  cascade-alerts.md  cli.md  collab-rooms.md  community-insights.md  comparison.md  context-survival.md  dashboard.md  distillery.md  evolution.md  getting-started.md  github-integration.md  h0c-format.md  industry-benchmarks.md  mcp-setup.md  namespaces.md  observability.md  openapi.json  outcomes.md  passive-capture.md  pattern-recommendations.md  playground.md  policies.md  python-sdk.md  quickstart.md  research-roadmap.md  review-queue.md  sdk.md  self-hosting.md  storage.md  (+6 more)
docs/benchmarks/: longmemeval.md
docs/framework-guides/: autogen.md  crewai.md  langchain.md  langgraph.md  openai-agents.md
e2e/: Dockerfile.server  README.md  RESULTS.md  docker-compose.yml  fake-llm-server.ts  run-e2e.sh  seed.ts  tsconfig.json  vitest.config.ts
e2e/dashboard/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/scenarios/: _helpers.ts  scenario-01-decision-lifecycle.e2e.ts  scenario-02-contradiction-detection.e2e.ts  scenario-03-entity-enrichment.e2e.ts  scenario-04-skill-dispatcher.e2e.ts  scenario-05-hybrid-search.e2e.ts  scenario-06-outcome-attribution.e2e.ts  scenario-07-relevance-learner.e2e.ts  scenario-08-embedding-pipeline.e2e.ts  scenario-09-branching.e2e.ts
examples/claude-mcp/: README.md  setup.sh
examples/crewai-team/: README.md  main.py  requirements.txt
examples/langgraph-agent/: README.md  main.py  requirements.txt
integrations/autogen/: pyproject.toml
integrations/crewai/: pyproject.toml
integrations/crewai/hipp0_crewai/: __init__.py  callback.py  memory.py
integrations/langchain/: pyproject.toml
integrations/langgraph/: README.md  pyproject.toml
integrations/langgraph/hipp0_langgraph/: __init__.py  checkpointer.py  context.py
integrations/openai-agents/: pyproject.toml
integrations/openai-agents/hipp0_openai_agents/: __init__.py  hooks.py
python-sdk/: README.md  pyproject.toml  setup.py
python-sdk/hipp0_memory/: __init__.py  auto.py  cli.py  server.py
python-sdk/hipp0_sdk/: __init__.py  client.py  exceptions.py  types.py
scripts/: backup.sh  deploy.sh  generate_playground.py  hermes-live-smoke.mjs  load-test.sh  phase-a-validation.ts  pull-fix-rebuild.sh  seed-demo.ts  seed_decisions.py  smoke-test.sh
skills/: RESOLVER.md
skills/brain-ops/: SKILL.md
skills/capture-decision/: SKILL.md
skills/compile-context/: SKILL.md
skills/enrich/: SKILL.md
skills/entity-ingest/: SKILL.md
skills/entity-query/: SKILL.md
skills/maintain/: SKILL.md
skills/record-outcome/: SKILL.md
skills/search-decisions/: SKILL.md
skills/signal-detector/: SKILL.md
skills/synthesize-branch/: SKILL.md
(+65 files in other folders)
