[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hipp0-langgraph"
version = "0.1.0"
description = "Hipp0 integration for LangGraph — checkpoint saver and context injection."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Perlantir" }]
keywords = ["hipp0", "langgraph", "multi-agent", "memory", "checkpointer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "hipp0-memory>=0.1.0",
    "langgraph-checkpoint>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/perlantir/Hipp0"
Repository = "https://github.com/perlantir/Hipp0"

[tool.setuptools.packages.find]
where = ["."]
include = ["hipp0_langgraph*"]
