[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hipp0-openai-agents"
version = "0.1.0"
description = "OpenAI Agents SDK integration for the Hipp0 multi-agent memory platform."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Perlantir" }]
keywords = ["hipp0", "openai", "agents", "memory", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "hipp0-sdk>=0.1.0",
    "openai-agents>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "responses>=0.23",
    "mypy>=1.0",
    "ruff>=0.4",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/perlantir/Hipp0"
Documentation = "https://github.com/perlantir/Hipp0"

[tool.setuptools.packages.find]
where = ["."]
include = ["hipp0_openai_agents*"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
